# unity-mcp-client

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.jp.md  README.md  pyproject.toml  unity_cli.py  unity_mcp_client.py
.claude/plugins/.claude-plugin/: marketplace.json
.claude/plugins/unity-workflow/.claude-plugin/: plugin.json
.claude/plugins/unity-workflow/skills/uasset/: SKILL.md
.claude/plugins/unity-workflow/skills/udebug/: SKILL.md
.claude/plugins/unity-workflow/skills/unity-csharp/: SKILL.md
.claude/plugins/unity-workflow/skills/uscene/: SKILL.md
.claude/plugins/unity-workflow/skills/uui/: SKILL.md
.claude/plugins/unity-workflow/skills/uverify/: SKILL.md
.github/workflows/: ci.yml
TestProject/Assets/: TestPrefab.prefab
TestProject/Assets/Prefabs/: CameraPrefab.prefab
TestProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
TestProject/ProjectSettings/: EditorSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
UnityBridge/: package.json
UnityBridge/Editor/: BridgeEditorWindow.cs  BridgeManager.cs  BridgeReloadHandler.cs  BridgeToolbar.cs  CommandDispatcher.cs  Protocol.cs  RelayClient.cs  RelayServerLauncher.cs
UnityBridge/Editor/Helpers/: BridgeJobStateStore.cs  BridgeLog.cs  PortManager.cs
UnityBridge/Editor/Tools/: Asset.cs  Build.cs  Component.cs  Console.cs  EditorSelection.cs  GameObject.cs  MenuItem.cs  Package.cs  Playmode.cs  Profiler.cs  Scene.cs  Screenshot.cs  Tests.cs  UITree.cs
docs/: skill-roadmap.md
relay/: instance_registry.py  protocol.py  request_cache.py  server.py
tests/: __init__.py  test_component_api.py  test_gameobject_api.py  test_instance_registry.py  test_package_api.py  test_protocol.py  test_request_cache.py  test_uitree_api.py
unity_cli/: client.py
unity_cli/api/: __init__.py  asset.py  build.py  component.py  console.py  gameobject.py  menu.py  package.py  screenshot.py  selection.py  uitree.py
unity_cli/cli/: app.py  completion.py  output.py
unity_cli/hub/: hub_cli.py  interactive.py  project.py  service.py
