[project]
name = "unity-mcp-client"
version = "1.2.0"
description = "Python client for Unity MCP - control Unity Editor via TCP protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "bigdra50" }
]
keywords = ["unity", "mcp", "game-development", "editor-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/bigdra50/unity-mcp-client"
Repository = "https://github.com/bigdra50/unity-mcp-client"

[project.scripts]
unity-mcp = "unity_mcp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "unity_mcp_client.py",
    "README.md",
    "LICENSE",
]
