[project]
name = "unity-mcp-client"
version = "1.3.0"
description = "Python client for Unity MCP - control Unity Editor via TCP protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "bigdra50" }
]
keywords = ["unity", "mcp", "game-development", "editor-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/bigdra50/unity-mcp-client"
Repository = "https://github.com/bigdra50/unity-mcp-client"

[project.scripts]
unity-mcp = "unity_mcp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "unity_mcp_client.py",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "F401",  # unused imports (TODO: fix in separate PR)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
# TODO: Enable strict mode in separate PR
# strict = true
# disallow_untyped_defs = true
